[project]
name = "ai-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
]
